--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="hero-wrapper">
                 <div class="container">
                     <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-                    <button class="modal-button" type="button">Заказать услугу</button>
+                    <button class="modal-button" type="button" data-modal-open>Заказать услугу</button>
                 </div>
             </div>
         </section>
@@ -412,5 +412,15 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-button" data-modal-close>
+                <svg class="close-button-icon" width="11" height="11">
+                    <use href="./images/sprite.svg#icon-Vector"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
